tests/neg/missing-implicit1.check
-- Error: tests/neg/missing-implicit1.scala:17:4 -----------------------------------------------------------------------
17 |  ff // error
   |    ^
   |no given instance of type testObjectInstance.Zip[Option] was found for parameter xs of method ff in object testObjectInstance
   |
   |The following import might fix the problem:
   |
   |  import testObjectInstance.instances.zipOption
   |
-- [E008] Not Found Error: tests/neg/missing-implicit1.scala:19:16 -----------------------------------------------------
19 |  List(1, 2, 3).traverse(x => Option(x)) // error
   |  ^^^^^^^^^^^^^^^^^^^^^^
   |  value traverse is not a member of List[Int], but could be made available as an extension method.
   |
   |  The following import might make progress towards fixing the problem:
   |
   |    import testObjectInstance.instances.traverseList
   |
-- Error: tests/neg/missing-implicit1.scala:23:42 ----------------------------------------------------------------------
23 |    List(1, 2, 3).traverse(x => Option(x)) // error
   |                                          ^
   |no given instance of type testObjectInstance.Zip[Option] was found for an implicit parameter of method traverse in trait Traverse
   |
   |The following import might fix the problem:
   |
   |  import testObjectInstance.instances.zipOption
   |
